[package]
name = "plan-widget"
version = "0.1.0"
authors = ["Dylan Lewis <dylan_lewis93@web.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.53"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.53"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'HtmlBodyElement',
  'HtmlTableElement',
  'HtmlTableSectionElement',
  'Element',
  'Node',
  'HtmlCanvasElement',
  'Window',
  'Performance', 
  'PerformanceTiming',
  'console'
]